--- a/src/app/orders/page-edit-order/page-edit-order.component.html
+++ b/src/app/orders/page-edit-order/page-edit-order.component.html
@@ -1,5 +1,6 @@
 <app-template-container title="Edit Order">
     <app-form-order 
         *ngIf="order$ | async as order"
-        [init]="order"></app-form-order>
+        [init]="order"
+        (submitCustom)="onSubmitEditOrder($event)"></app-form-order>
 </app-template-container>
